--- a/src/style/style.css
+++ b/src/style/style.css
@@ -145,7 +145,7 @@ body {
   background-size: contain;
 }
 
-.buttons h2 {
+.nextOrRet h2 {
   color: #fff;
   text-align: center;
   text-shadow: 4px 4px 0px #000;
@@ -207,17 +207,29 @@ body {
 }
 
 .next p:hover {
-  transform: rotate(-1.934deg); 
+  transform: rotate(-1.934deg);
 }
 
 .fdc {
   display: flex;
   flex-direction: column;
-
 }
 
-.buttons div {
+.nextOrRet {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: max-content;
+  left: 50%;
+  transform: translateX(-50%);
+  gap: 31px;
+  bottom: 61px;
+  text-align: center;
+}
+
+.buttons_next {
   display: flex;
   justify-content: center;
   gap: 25px;
+
 }
